force-app/main/default/objects/EmailMessage/fields/Cloud_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Attachment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Attachment</label>
    <referenceTo>Cloud_Attachment__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>