force-app/main/default/objects/EmailMessage/fields/Has_Image_Video_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_Image_Video_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Image Video Attachments</label>
    <type>Checkbox</type>
</CustomField>