force-app/main/default/objects/EmailMessage/fields/Other_Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>Other_Attachment_URL__c</fullName>
    <label>Other Attachment URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>