force-app/main/default/objects/EmailMessage/fields/S3_Attachment_Params__c.field-meta.xml
<CustomField>
    <fullName>S3_Attachment_Params__c</fullName>
    <label>S3 Attachment Params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>