force-app/main/default/objects/EmailMessage/fields/Video_Attachment_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_Attachment_URL__c</fullName>
    <label>Video Attachment URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>