force-app/main/default/objects/EmailMessage/validationRules/validation.validationRule-meta.xml
<ValidationRule>
    <fullName>validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
FromAddress !=  Parent.Source:EmailMessage.ToAddress
 
)</errorConditionFormula>
    <errorMessage>Please Use the Original Address for sending email</errorMessage>
</ValidationRule>